--- a/SPP-Android/frontend/app/src/main/AndroidManifest.xml
+++ b/SPP-Android/frontend/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Apk_spp"
         tools:targetApi="31">
         <activity
+            android:name=".ParentActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
